--- a/Project_Information/Team_EDA_Baseline_FullData.ipynb
+++ b/Project_Information/Team_EDA_Baseline_FullData.ipynb
@@ -9609,6 +9609,22 @@
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a51f3f36",
+   "metadata": {},
+   "source": [
+    "hallo julius "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81d9f73b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
