EDA final on the way, shoutout to everyone

--- a/Project_Information/Team_EDA_Baseline_FullData.ipynb
+++ b/Project_Information/Team_EDA_Baseline_FullData.ipynb
@@ -3516,7 +3516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "id": "81935b89",
    "metadata": {},
    "outputs": [
@@ -3800,38 +3800,42 @@
    ],
    "source": [
     "\n",
-    "# ── Print a sample entry where exactly 7 columns are NULL ─────────────────────\n",
-    "schema_df = con.execute(\"DESCRIBE spotify_full\").df()\n",
-    "all_cols  = schema_df[\"column_name\"].tolist()\n",
+    "# ── One sample entry per distinct null-count group — displayed side by side ───\n",
+    "# Collect one sample row per group, then concatenate into a wide comparison table.\n",
     "\n",
-    "null_count_expr = \" + \".join(\n",
-    "    [f\"CASE WHEN \\\"{c}\\\" IS NULL THEN 1 ELSE 0 END\" for c in all_cols]\n",
-    ")\n",
+    "samples = {}\n",
     "\n",
-    "sample_7null = con.execute(f\"\"\"\n",
-    "    SELECT *\n",
-    "    FROM spotify_full\n",
-    "    WHERE ({null_count_expr}) = 7\n",
-    "    LIMIT 1\n",
-    "\"\"\").df()\n",
+    "for n_nulls in null_dist[\"n_nulls_in_row\"].tolist():\n",
+    "    n_rows = int(null_dist.loc[null_dist[\"n_nulls_in_row\"] == n_nulls, \"n_rows\"].values[0])\n",
     "\n",
-    "if sample_7null.empty:\n",
-    "    print(\"No entries found with exactly 7 null columns.\")\n",
-    "else:\n",
-    "    print(\"── Sample entry with exactly 7 NULL columns ─────────────────\")\n",
-    "    # Transpose for readability: one row per column showing value + null flag\n",
-    "    row = sample_7null.iloc[0]\n",
-    "    summary = pd.DataFrame({\n",
-    "        \"column\":   row.index,\n",
-    "        \"value\":    row.values,\n",
-    "        \"is_null\":  row.isna().values,\n",
-    "    })\n",
-    "    null_cols    = summary[summary[\"is_null\"]][\"column\"].tolist()\n",
-    "    present_cols = summary[~summary[\"is_null\"]][\"column\"].tolist()\n",
+    "    row = con.execute(f\"\"\"\n",
+    "        SELECT *\n",
+    "        FROM spotify_full\n",
+    "        WHERE ({null_count_expr}) = {n_nulls}\n",
+    "        LIMIT 1\n",
+    "    \"\"\").df().iloc[0]\n",
     "\n",
-    "    print(f\"\\n  Null columns ({len(null_cols)}): {null_cols}\")\n",
-    "    print(f\"  Present columns ({len(present_cols)}): {present_cols}\\n\")\n",
-    "    display(sample_7null.T.rename(columns={0: \"value\"}))\n"
+    "    col_label = f\"{n_nulls} nulls\\n({n_rows:,} rows)\"\n",
+    "    samples[col_label] = row\n",
+    "\n",
+    "# Build wide DataFrame: rows = columns of spotify_full, columns = null-count groups\n",
+    "wide = pd.DataFrame(samples)\n",
+    "\n",
+    "# Highlight null cells in red\n",
+    "def highlight_nulls(df):\n",
+    "    return df.applymap(lambda v: \"background-color: #ffcccc; color: #cc0000\" if pd.isna(v) else \"\")\n",
+    "\n",
+    "display(\n",
+    "    wide.style\n",
+    "    .apply(highlight_nulls, axis=None)\n",
+    "    .set_table_styles([\n",
+    "        {\"selector\": \"th\", \"props\": [(\"font-size\", \"11px\"), (\"text-align\", \"center\"), (\"white-space\", \"pre-wrap\")]},\n",
+    "        {\"selector\": \"td\", \"props\": [(\"font-size\", \"10px\"), (\"max-width\", \"160px\"),\n",
+    "                                      (\"overflow\", \"hidden\"), (\"text-overflow\", \"ellipsis\"),\n",
+    "                                      (\"white-space\", \"nowrap\")]},\n",
+    "    ])\n",
+    "    .set_caption(\"Sample entry per null-count group — red cells are NULL\")\n",
+    ")\n"
    ]
   },
   {
