feedback: Added new structure suggestion for EDA

--- a/Project_Information/EDA_organised.ipynb
+++ b/Project_Information/EDA_organised.ipynb
@@ -2,6 +2,248 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "0d381844",
+   "metadata": {},
+   "source": [
+    "# NEW STRUCTURE\n",
+    "\n",
+    "**Important**: \n",
+    "1. for each section, write about what you're gonna do and how. At the end a quick summary of the findings and next steps.\n",
+    "2. this md cell only serves as a guideline for our hackers. So this is not the final first md cell for the report.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Table of Contents\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 0. Executive Summary\n",
+    "`🔲 TO BE WRITTEN LAST`\n",
+    "\n",
+    "A concise summary (max 1 page) of the most important findings from the EDA. Written after all analyses are complete. Should cover:\n",
+    "- Dataset size, scope, and quality verdict\n",
+    "- 5–7 key findings that directly inform modeling decisions\n",
+    "- Identified risks and limitations\n",
+    "- Clear transition statement into feature engineering and modeling\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 1. Setup and Data Loading\n",
+    "`✅ DONE — minor cleanup needed`\n",
+    "\n",
+    "- 1.1 Import libraries\n",
+    "- 1.2 Path configuration and environment setup\n",
+    "- 1.3 R2 download script (keep as optional cell, default OFF)\n",
+    "- 1.4 Load parquet partitions into DuckDB view\n",
+    "\n",
+    "**Cleanup needed:** Remove sklearn/modeling imports from this section — they don't belong in EDA setup. Only import what's needed for EDA (duckdb, pandas, numpy, matplotlib, seaborn).\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 2. Dataset Overview and Quality Assessment\n",
+    "`✅ MOSTLY DONE — needs consolidation`\n",
+    "\n",
+    "- 2.1 Shape, schema, and column types `✅`\n",
+    "- 2.2 Time coverage (years, date range) `✅`\n",
+    "- 2.3 Key categorical counts (regions, charts, unique tracks, unique artists) `✅`\n",
+    "- 2.4 Chart composition — Top 200 vs Viral 50 split `✅`\n",
+    "- 2.5 Global vs local row share `✅`\n",
+    "\n",
+    "**Note:** Add a brief plain-English paragraph after this section: \"What is this dataset? Each row represents...\"  Already partially done — make sure it's prominent and clear.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 3. Data Quality Assessment\n",
+    "`✅ MOSTLY DONE — consolidate and tighten`\n",
+    "\n",
+    "- 3.1 Missing values — null rates per column `✅`\n",
+    "- 3.2 Missing value patterns — null-count-per-row distribution `✅`\n",
+    "- 3.3 Sample entries per null-count group (diagnostic table) `✅`\n",
+    "- 3.4 Streams: null and zero entry analysis `✅`\n",
+    "- 3.5 Row completeness summary `✅`\n",
+    "- 3.6 Duplicate check (track_id × region × date × chart) `✅`\n",
+    "- 3.7 Country coverage — active days, first/last seen per region `✅`\n",
+    "- 3.8 Data type issues — columns stored as VARCHAR that should be numeric `🔲`\n",
+    "\n",
+    "**Action items:**\n",
+    "- Add section 3.8: explicitly list columns that need type casting (streams, rank, all af_* columns, popularity, duration_ms are all VARCHAR). Document the casting strategy.\n",
+    "- After section 3, write a **\"Data Quality Verdict\"** paragraph: what do we keep, what do we drop, what do we impute? This becomes the cleaning spec for the feature engineering pipeline.\n",
+    "- Specifically decide: do we drop rows where cultural_distance is null (~19%)? Do we drop rows where streams is null (~22%)? Document the decision and reasoning.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 4. Filtering Decisions\n",
+    "`🔲 NEW SECTION NEEDED`\n",
+    "\n",
+    "Before any analysis, document and execute the filtering decisions that define our working dataset:\n",
+    "\n",
+    "- 4.1 Filter to Top 200 chart only (exclude Viral 50 from main analysis — Viral 50 used only as a feature flag)\n",
+    "- 4.2 Exclude \"Global\" region (it's an aggregation, not a country)\n",
+    "- 4.3 Handle countries without cultural distance data — drop or keep?\n",
+    "- 4.4 Deduplicate confirmed-identical duplicate rows\n",
+    "- 4.5 Define the clean working view (`spotify_clean`) with all filters applied\n",
+    "- 4.6 Print final working dataset shape and confirm\n",
+    "\n",
+    "**Why this matters:** Every subsequent analysis must use the same clean base. Define it once here.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 5. Univariate Analysis — Target Variable\n",
+    "`⚠️ PARTIALLY DONE — needs reframing around actual target`\n",
+    "\n",
+    "This is the most important EDA section. It directly defines our prediction task.\n",
+    "\n",
+    "- 5.1 Countries reached per song — distribution `✅ done in 8.3`\n",
+    "  - Histogram of number of countries per unique track\n",
+    "  - Key stats: median = 1, mean = 3, 73% never leave first country\n",
+    "- 5.2 Define the binary target threshold `🔲`\n",
+    "  - Test multiple thresholds (3, 5, 7, 10 countries)\n",
+    "  - Show class balance at each threshold\n",
+    "  - Pick threshold that gives ~25–35% positive rate\n",
+    "  - Justify the choice\n",
+    "- 5.3 Target variable by year `🔲`\n",
+    "  - Is cross-border success becoming more or less common over time?\n",
+    "- 5.4 Target variable by origin country `🔲`\n",
+    "  - Which origin countries produce the most internationally successful songs?\n",
+    "  - Is this just a function of market size?\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 6. Univariate Analysis — Features\n",
+    "`⚠️ PARTIALLY DONE — needs restructuring`\n",
+    "\n",
+    "Analyze each feature group independently.\n",
+    "\n",
+    "- 6.1 Audio features — distributions `✅ done in 8.4`\n",
+    "  - Histograms of all 9 audio features\n",
+    "  - Flag any that are heavily skewed or have outliers (instrumentalness is extremely right-skewed)\n",
+    "- 6.2 Streams distribution `✅ done in 7.5`\n",
+    "  - Linear and log-scale distributions\n",
+    "  - Percentile breakdown\n",
+    "- 6.3 Artist-level distributions `🔲`\n",
+    "  - Distribution of: tracks per artist, countries per artist, chart longevity per artist\n",
+    "  - Identify the \"superstar\" tail vs long tail of local artists\n",
+    "- 6.4 Release timing distributions `🔲`\n",
+    "  - Songs released by month/day of week\n",
+    "  - Any seasonal patterns?\n",
+    "- 6.5 Explicit content flag `🔲`\n",
+    "  - What proportion of songs are explicit?\n",
+    "  - Does this vary by country or genre?\n",
+    "- 6.6 Song language distribution `🔲`\n",
+    "  - If language has been inferred: what's the language breakdown?\n",
+    "  - What proportion of songs are English vs Spanish vs other?\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 7. Bivariate Analysis — Features vs Target\n",
+    "`🔲 NEW SECTION — CRITICAL`\n",
+    "\n",
+    "This is where we test whether our planned features actually relate to cross-border success. Every planned model feature should appear here.\n",
+    "\n",
+    "- 7.1 Audio features vs target `🔲`\n",
+    "  - Compare audio feature distributions for songs that traveled (5+ countries) vs songs that didn't\n",
+    "  - Box plots or violin plots split by target class\n",
+    "  - **Hypothesis:** Based on correlation analysis (all < 0.02 with streams), audio features alone likely won't be strong predictors. Confirm or refute this.\n",
+    "- 7.2 Artist profile vs target `🔲`\n",
+    "  - Do songs by artists with more prior international hits travel further?\n",
+    "  - Scatter: artist_prior_unique_regions vs countries_reached for current song\n",
+    "  - This should show the strongest signal in the dataset\n",
+    "- 7.3 Origin country vs target `🔲`\n",
+    "  - Bar chart: proportion of songs that become international hits, by origin country\n",
+    "  - Are US/UK origin songs more likely to travel?\n",
+    "- 7.4 Explicit flag vs target `🔲`\n",
+    "  - Does explicit content help or hurt international spread?\n",
+    "- 7.5 Release timing vs target `🔲`\n",
+    "  - Do songs released in certain months travel more?\n",
+    "- 7.6 Viral 50 flag vs target `🔲`\n",
+    "  - Are songs that appear on Viral 50 more likely to chart internationally?\n",
+    "  - This tests whether organic buzz predicts cross-border success\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 8. Geographic and Cultural Analysis\n",
+    "`⚠️ PARTIALLY DONE — needs significant expansion`\n",
+    "\n",
+    "This is the most novel part of our EDA and directly supports our core hypothesis.\n",
+    "\n",
+    "- 8.1 Country-level stream volume comparison `✅ done in 8.1`\n",
+    "  - Average/median streams by country\n",
+    "  - Market size ranking\n",
+    "- 8.2 Continent-level stream comparison `✅ done`\n",
+    "  - Box plots of log(streams) by continent\n",
+    "- 8.3 Cross-border flow matrix `🔲 CRITICAL`\n",
+    "  - For all songs that charted in 2+ countries: build a country × country co-occurrence matrix\n",
+    "  - Heatmap: \"if a song charts in country A, how likely is it to also chart in country B?\"\n",
+    "  - This directly validates the geographic relationship features\n",
+    "- 8.4 Language analysis `🔲 CRITICAL`\n",
+    "  - Do songs travel more to countries that share their language?\n",
+    "  - Compare: Spanish songs → spread to Latin American countries vs non-Spanish-speaking countries\n",
+    "  - English songs → spread pattern vs non-English songs\n",
+    "  - This validates the `same_language_flag` feature\n",
+    "- 8.5 Cultural distance analysis `🔲 CRITICAL`\n",
+    "  - Plot: cultural_distance vs probability of cross-border charting\n",
+    "  - Does lower cultural distance = higher probability of song traveling?\n",
+    "  - This validates the `cultural_distance_origin_target` feature\n",
+    "- 8.6 Diffusion timeline analysis `🔲`\n",
+    "  - For songs that traveled: how long does it take to reach the 2nd, 3rd, 5th, 10th country?\n",
+    "  - Median/distribution of days_to_arrive by country\n",
+    "  - Are some countries consistently \"early adopters\" and others \"late followers\"?\n",
+    "- 8.7 Chart stay analysis `✅ done in 8.1`\n",
+    "  - Longest/shortest chart stays\n",
+    "  - Distribution of chart duration per song per country\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 9. Correlation and Multicollinearity\n",
+    "`⚠️ DONE but needs expansion`\n",
+    "\n",
+    "- 9.1 Correlation matrix — audio features `✅ done in 8.5`\n",
+    "  - Heatmap with values\n",
+    "  - Flag highly correlated pairs (energy–loudness)\n",
+    "- 9.2 Correlation with target variable `🔲`\n",
+    "  - Correlate all numeric features with the binary target (international success yes/no)\n",
+    "  - This replaces the current correlation with log(streams) which is irrelevant to our task\n",
+    "- 9.3 Multicollinearity check `🔲`\n",
+    "  - VIF (Variance Inflation Factor) for planned numeric features\n",
+    "  - Identify features that might need to be dropped or combined\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 10. Key Findings Summary\n",
+    "`🔲 TO BE WRITTEN AFTER ALL ANALYSES`\n",
+    "\n",
+    "Structured summary of findings organized by decision they inform:\n",
+    "\n",
+    "- 10.1 Target variable decision — chosen threshold and justification\n",
+    "- 10.2 Feature relevance ranking — which features show strongest signal?\n",
+    "- 10.3 Data quality decisions — what was dropped/imputed and why\n",
+    "- 10.4 Geographic/cultural hypotheses — confirmed or refuted?\n",
+    "- 10.5 Risks and limitations for modeling\n",
+    "- 10.6 Transition to feature engineering — explicit list of features to build\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### ~~11–16. Modeling sections~~\n",
+    "`❌ REMOVED — modeling belongs in a separate notebook`\n",
+    "\n",
+    "All modeling (linear regression, regularization, gradient descent) has been moved out of this EDA notebook. Modeling will be done in `04_modeling.ipynb` after feature engineering is complete. The EDA notebook's job is to understand the data, not to fit models.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Formatting Standards\n",
+    "\n",
+    "To ensure consistency and address professor feedback from 2022:\n",
+    "\n",
+    "- **Figure sizes:** Standardize to `figsize=(12, 6)` for wide plots, `figsize=(8, 6)` for square plots. Never exceed `figsize=(14, 8)`.\n",
+    "- **Titles and labels:** Every plot must have a title, axis labels, and readable font sizes (min 11pt).\n",
+    "- **Colors:** Use a consistent palette throughout. Avoid red-green combinations (accessibility). Suggested: `steelblue` for primary, `salmon` for secondary, `seaborn` default palette for multi-category.\n",
+    "- **Markdown cells:** Every code section must be preceded by a markdown cell explaining (1) what we're doing, (2) why, and (3) what to look for in the output.\n",
+    "- **Insight cells:** After every analysis, include a markdown cell with **\"Key takeaway:\"** stating the finding in plain English and its implication for modeling.\n",
+    "- **No raw code output without interpretation.** If a table or number is displayed, explain what it means."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "77aa1b23",
    "metadata": {},
    "source": [
